# Csv-default-predictor

./: output.csv  predict.ipynb  pyproject.toml  train.ipynb  train.py
api/: main.py
data/: data.csv
