[tool.poetry]
name = "csv-default-predictor"
version = "0.1.0"
description = ""
authors = ["Pietro <padovesepietro1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.09"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
